--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,14 @@
 name = "cargo-emanate"
 version = "0.1.0"
 edition = "2021"
-
+license = "Apache-2.0 OR MIT"
+repository = "https://github.com/aspectron/cargo-emanate"
+keywords = ["cargo", "subcommand", "installation", "package"]
+categories = ["command-line-utilities", "development-tools::cargo-plugins", "development-tools::build-utils"]
+exclude = ["/.*", "/test"]
+description = """
+Cargo subcommand for multi-repository management and creation of application packages.
+"""
 
 [dependencies]
 clap = { version = "3.2.17", features = ["derive"] }
