--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,7 @@ serde_json = "1.0"
 thiserror = "1.0"
 async-std = "1.12.0"
 console = "0.15.0"
-
+crates_io_api = "0.8.1"
+linked-hash-map = "0.5.6"
+home = "0.5.3"
+cargo_toml = "0.13.0"
