--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-emanate"
-version = "0.1.3"
+version = "0.2.0"
 edition = "2021"
 license = "Apache-2.0 OR MIT"
 repository = "https://github.com/aspectron/cargo-emanate"
@@ -8,7 +8,7 @@ keywords = ["cargo", "subcommand", "installation", "package"]
 categories = ["command-line-utilities", "development-tools::cargo-plugins", "development-tools::build-utils"]
 exclude = ["/.*", "/test"]
 description = """
-Cargo subcommand for multi-repository management and creation of application packages.
+Cargo subcommand for publishing workspace-based crates.
 """
 
 [dependencies]
@@ -16,13 +16,11 @@ clap = { version = "3.2.17", features = ["derive"] }
 duct = "0.13.5"
 toml = "0.5.9"
 tokio = { version = "1.20.1", features = ["full"] }
-serde = "1.0.97"
-serde_derive = "1.0"
-serde_json = "1.0"
+serde = { version = "1.0.97", features = ["derive", "rc"] }
 thiserror = "1.0"
 async-std = "1.12.0"
 console = "0.15.0"
 crates_io_api = "0.8.1"
-linked-hash-map = "0.5.6"
 home = "0.5.3"
-cargo_toml = "0.13.0"
+futures-util = "0.3.26"
+toml_edit = "0.19.1"
