--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ futures-util = "0.3.26"
 home = "0.5.4"
 pad = "0.1.6"
 serde = { version = "1.0.152", features = ["derive", "rc"] }
+serde_json = "1.0.95"
 thiserror = "1.0.38"
 tokio = { version = "1.25.0", features = ["full"] }
 toml = "0.7.1"
