--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-emanate"
-version = "0.3.0"
+version = "0.3.1"
 edition = "2021"
 license = "Apache-2.0 OR MIT"
 repository = "https://github.com/aspectron/cargo-emanate"
@@ -26,3 +26,4 @@ thiserror = "1.0.38"
 tokio = { version = "1.25.0", features = ["full"] }
 toml = "0.7.1"
 toml_edit = "0.19.1"
+convert_case = "0.6.0"
