--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ tokio = { version = "1.25.0", features = ["full"] }
 toml = "0.7.1"
 toml_edit = "0.19.1"
 convert_case = "0.6.0"
+cfg-if = "1.0.0"
