--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-emanate"
-version = "0.4.2"
+version = "0.4.3"
 edition = "2021"
 license = "Apache-2.0 OR MIT"
 repository = "https://github.com/aspectron/cargo-emanate"
@@ -24,6 +24,7 @@ fs_extra = "1.3.0"
 futures-util = "0.3.28"
 home = "0.5.4"
 pad = "0.1.6"
+regex = "1.10.2"
 serde = { version = "1.0.160", features = ["derive", "rc"] }
 serde_json = "1.0.96"
 tar = "0.4.38"
